Fixed height difference popup and assessment buttons, styling for new popup-tag attribute: titel, alignment of numbered lists.

--- a/Author-java/MathUnited/src/main/webapp/css/basis_studiovo.css
+++ b/Author-java/MathUnited/src/main/webapp/css/basis_studiovo.css
@@ -170,8 +170,11 @@ h2 {
 ul.learningaspects li{
     margin:20px 0px 20px 0px;
 }
-#content ul, #content ol {
-    padding-left:20px;
+#content ol {
+    padding-left: 2.3em; 
+}
+#content ul {
+    padding-left: 1.5em; 
 }
 .studiovo-movie-icon {
     height:1.5em; 
@@ -208,12 +211,13 @@ iframe {
     display:none;
 }
 .popup-label {
-    display:inline;
+    display:inline-block;
     background-color: #528CE0;
     padding:4px 10px;
     color:white;
     font-weight:bold;
     cursor:pointer;
+    margin-right: 0.5em;
 }
 .popup-label:hover {
     background-color: #74AEFF;    
